--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: slopegraph
-Version: 0.1.7
+Version: 0.1.8
 Title: Edward Tufte-Inspired Slopegraphs
-Date: 2016-09-15
+Date: 2016-10-31
 Authors@R: c(person("Thomas", "Leeper", role = c("aut","cre"),
                     email = "thosjleeper@gmail.com"))
-Description: Convert a data.frame (containing a panel dataset, where rows are observations and columns are time periods) into an Edward Tufte-inspired slopegraph.
-Imports: stats, graphics
-Suggests: svglite
+Description: Convert a data frame (containing a panel dataset, where rows
+    are observations and columns are time periods) into an Edward Tufte-inspired
+    "slopegraph".
+Imports:
+    stats,
+    graphics
+Suggests:
+    svglite
 License: GPL-2
 URL: https://github.com/leeper/slopegraph
 BugReports: https://github.com/leeper/slopegraph/issues
+RoxygenNote: 5.0.1
