switch to a segment-based drawing approach

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: Convert a data frame (containing a panel dataset, where rows
     "slopegraph".
 Imports:
     stats,
+    utils,
     graphics
 Suggests:
     svglite
