use reshape() to avoid repeated value labels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ import(ggplot2)
 import(graphics)
 importFrom(stats,embed)
 importFrom(stats,na.omit)
+importFrom(stats,reshape)
 importFrom(utils,head)
