--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ import(graphics)
 importFrom(stats,embed)
 importFrom(stats,na.omit)
 importFrom(stats,reshape)
+importFrom(stats,setNames)
 importFrom(utils,head)
