--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,11 @@ Package: slopegraph
 Version: 0.1.14
 Title: Edward Tufte-Inspired Slopegraphs
 Date: 2017-07-14
-Authors@R: c(person("Thomas", "Leeper", role = c("aut","cre"),
-                    email = "thosjleeper@gmail.com"))
+Authors@R: c(person("Thomas J.", "Leeper",
+                    role = c("aut", "cre"), 
+                    email = "thosjleeper@gmail.com",
+                    comment = c(ORCID = "0000-0003-4097-6326"))
+             )
 Description: Convert a data frame (containing a panel dataset, where rows
     are observations and columns are time periods) into an Edward Tufte-inspired
     "slopegraph" using either base or ggplot2 graphics.
