--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,13 @@ Imports:
     stats,
     utils,
     graphics,
-    ggplot2
+    ggplot2,
+    ggrepel,
+    methods,
+    dplyr
 Suggests:
     svglite
 License: GPL-2
 URL: https://github.com/leeper/slopegraph
 BugReports: https://github.com/leeper/slopegraph/issues
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
