--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,10 @@ Date: 2017-07-14
 Authors@R: c(person("Thomas J.", "Leeper",
                     role = c("aut", "cre"), 
                     email = "thosjleeper@gmail.com",
-                    comment = c(ORCID = "0000-0003-4097-6326"))
+                    comment = c(ORCID = "0000-0003-4097-6326")),
+                    person("Chuck", "Powell", 
+                    role = "ctb",
+                    email = "ibecav@gmail.com")
              )
 Description: Convert a data frame (containing a panel dataset, where rows
     are observations and columns are time periods) into an Edward Tufte-inspired
