--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,12 @@ Imports:
     methods,
     dplyr
 Suggests:
-    svglite
+    svglite,
+    knitr,
+    rmarkdown
 LazyData: true
 License: GPL-2
 URL: https://github.com/leeper/slopegraph
 BugReports: https://github.com/leeper/slopegraph/issues
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
